crates/gossamer-diagnostics/tests/snapshots/GT0003.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0003]: An operator (`+`, `*`, `==`, …) was applied to a type that does - here
--- framed ---
error[GT0003]: An operator (`+`, `*`, `==`, …) was applied to a type that does
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
