crates/gossamer-diagnostics/tests/snapshots/GT0004.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0004]: A `match` expression does not cover every possible value. Add - here
--- framed ---
error[GT0004]: A `match` expression does not cover every possible value. Add
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
