crates/gossamer-diagnostics/tests/snapshots/GT0005.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0005]: The `as` cast is restricted to a whitelist of conversions: — here
--- framed ---
error[GT0005]: The `as` cast is restricted to a whitelist of conversions:
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
