crates/gossamer-diagnostics/tests/snapshots/GT0007.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0007]: A `Result<T, E>` expression was used as a statement without its — here
--- framed ---
error[GT0007]: A `Result<T, E>` expression was used as a statement without its
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
