crates/gossamer-diagnostics/tests/snapshots/GT0008.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0008]: An expression, type, or pattern nested past the type-checker's - here
--- framed ---
error[GT0008]: An expression, type, or pattern nested past the type-checker's
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
