crates/gossamer-diagnostics/tests/snapshots/GT0009.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0009]: An integer literal overflows the value range of its declared — here
--- framed ---
error[GT0009]: An integer literal overflows the value range of its declared
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
