crates/gossamer-diagnostics/tests/snapshots/GT0010.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0010]: A string escape that the parser accepted but cannot be validly - here
--- framed ---
error[GT0010]: A string escape that the parser accepted but cannot be validly
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
