crates/gossamer-diagnostics/tests/snapshots/GT0011.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0011]: A `<T: Bound>` clause names a trait the resolver does not know - here
--- framed ---
error[GT0011]: A `<T: Bound>` clause names a trait the resolver does not know
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
