crates/gossamer-diagnostics/tests/snapshots/GT0012.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0012]: An enum declares more variants than the one-byte heap - here
--- framed ---
error[GT0012]: An enum declares more variants than the one-byte heap
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
