crates/gossamer-diagnostics/tests/snapshots/GT0013.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0013]: A closure was passed to a std combinator the checker has no - here
--- framed ---
error[GT0013]: A closure was passed to a std combinator the checker has no
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
